Task 45: extract AbstractHeartbeatBench + shared bench/Tasks.java
Eliminates ~160 lines of duplication across the six JMH benchmarks:

- AbstractHeartbeatBench: shared @State/@BenchmarkMode/@OutputTimeUnit/
  @Warmup/@Measurement/@Fork annotations, protected executor field,
  calibrated defaultConfig() (period=20τ, cost=τ via TimingCalibration),
  and @TearDown closeExecutor().

- Tasks.java: shared FibTask, FjFib, and seqFib() previously copy-pasted
  into FibBench, BoundsBench, and ComparativeBench.

All six benchmarks extend AbstractHeartbeatBench. ComparativeBench keeps
its own @TearDown for the ForkJoinPool; JMH calls both tear-downs.
MatmulBench inner classes are now static final (fixing the non-static
capture issue from task 59).